Z-Index corrections

--- a/public/styles/contactstyles.css
+++ b/public/styles/contactstyles.css
@@ -2,6 +2,10 @@
 /*    Phone Portrait Orientation    */
 /* //////////////////////////////// */
 @media screen and (max-width:450px){
+
+    .main{
+        z-index: 0;
+    }
     
     .contact-strip-list{
         list-style: none;
